css fixes for image size on small screens

--- a/css/index.css
+++ b/css/index.css
@@ -173,11 +173,6 @@ section {
   color: white;
 }
 
-.donate .prices {
-  width: 100%;
-  height: 100%;
-
-} 
 
 .donate-explanation {
   margin-bottom: 20px;
@@ -489,4 +484,8 @@ input[type="email"]:focus {
 
 small {
   font-size: .6em;
+}
+
+img {
+  max-width: 100%;
 }
